<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="5"
        android:title="@string/about_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="1"
        android:title="@string/order"
        android:icon="@drawable/ic_add_shopping_cart"
        app:showAsAction="ifRoom" />
    <item
    android:id="@+id/action_Status"
    android:orderInCategory="3"
    android:title="@string/status"
    app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_black_24dp"/>
    <item
        android:id="@+id/action_call"
        android:orderInCategory="2"
        android:title="@string/call_us"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_phone_in_talk_black_24dp"/>
    <item
        android:id="@+id/location"
        android:orderInCategory="4"
        android:title="@string/locate_us"
        app:showAsAction="ifRoom"
        android:icon="@drawable/locate_us"/>

</menu>
