<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
<TextView
    android:id="@+id/text_intro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/droid_deserts"
    android:textSize="20sp"
    android:textColor="@color/colorPrimary"
    android:textStyle="bold"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/choose_desert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_desert"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/text_intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
<ImageView
    android:id="@+id/donut"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/donuts"
    android:onClick="showDonutMessage"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/choose_desert"
    android:contentDescription="@string/donuts_are_glazed_sprinkled_with_candy"/>
    <TextView
        android:id="@+id/text_donut"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/donuts_are_glazed_sprinkled_with_candy"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toRightOf="@id/donut"
        app:layout_constraintTop_toBottomOf="@id/choose_desert"
        app:layout_constraintBottom_toBottomOf="@id/donut"/>
    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icecream"
        android:onClick="showIcecreamMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donut"
        android:contentDescription="@string/ice_cream_sandwiches_have_vanilla_and_chocolate_filling"/>

    <TextView
        android:id="@+id/text_icecream"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ice_cream_sandwiches_have_vanilla_and_chocolate_filling"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/ice_cream"
        app:layout_constraintLeft_toRightOf="@id/ice_cream"
        app:layout_constraintTop_toBottomOf="@id/text_donut"
        app:layout_constraintVertical_bias="0.644" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/froyo"
        android:onClick="showFroyoMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ice_cream"
        android:contentDescription="@string/froyo_is_a_premium_self_served_frozen_yogurt"/>

    <TextView
        android:id="@+id/text_froyo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/froyo_is_a_premium_self_served_frozen_yogurt"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/froyo"
        app:layout_constraintLeft_toRightOf="@id/froyo"
        app:layout_constraintTop_toBottomOf="@id/text_icecream"
        app:layout_constraintVertical_bias="0.635" />


</androidx.constraintlayout.widget.ConstraintLayout>
